deployments/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: denglufei/backend:1.0.3
          args: ["--spring.config.location=/config/application.properties"]
          volumeMounts:
            - name: backend-config-volume
              mountPath: config
          ports:
            - containerPort: 8080
      volumes:
        - name: backend-config-volume
          configMap:
            name: backend-config
            items:
              - key: application.properties
                path: application.properties
